[gd_scene load_steps=2 format=3 uid="uid://qe1rmal7ogkw"]

[ext_resource type="Script" uid="uid://dj7rkuecx6egx" path="res://addons/quest_weaver/ui/components/random_output_editor_entry.gd" id="1_3pw3i"]

[node name="RandomOutputEditorEntry" type="HBoxContainer"]
script = ExtResource("1_3pw3i")

[node name="RemoveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="PortNameEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Port Name"

[node name="WeightSpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0
